Fix homepage content alignment

--- a/_sass/layout/_custom-overrides.scss
+++ b/_sass/layout/_custom-overrides.scss
@@ -5,11 +5,8 @@
 }
 
 @media screen and (min-width: 925px) {
-  .page {
-    width: 100%;
-  }
-
   .page .page__inner-wrap {
     max-width: 1100px;
+    margin: 0 auto;
   }
 }
